--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,12 @@
 <resources>
 
 	<!-- SkyTube theme -->
-	<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-		<item name="colorPrimary">@color/colorPrimary</item>
+	<style name="AppTheme" parent="Theme.MaterialComponents">
+		<item name="colorPrimary">@color/colorAccent</item>
 		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 		<item name="colorAccent">@color/colorAccent</item>
 
-		<item name="actionBarPopupTheme">@style/ThemeOverlay.AppCompat</item>
+<!--		<item name="actionBarPopupTheme">@style/ThemeOverlay.AppCompat</item>-->
 		<item name="android:popupMenuStyle">@style/PopupMenu</item>
 		<item name="popupMenuStyle">@style/PopupMenu</item>
 
@@ -17,8 +17,22 @@
 		<item name="android:textAppearanceSmallPopupMenu">@style/VideoOptionsTextAppearanceSmall</item>
 	</style>
 
+	<style name="AppTheme.Preferences" parent="Theme.AppCompat.Light">
+	</style>
 
-	<!-- *************************************************************************************** -->
+	<style name="AppTheme.CustomBackground" parent="AppTheme">
+		<item name="android:background">@color/colorPrimary</item>
+	</style>
+
+    <style name="FixedTabs">
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="tabIndicatorColor">@color/colorAccent</item>
+        <item name="tabSelectedTextColor">@android:color/white</item>
+        <item name="tabIndicatorHeight">3dp</item>
+        <item name="tabMaxWidth">0dp</item>
+    </style>
+
+    <!-- *************************************************************************************** -->
 	<!--
 		Main Activity
 	-->
@@ -92,14 +106,14 @@
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:textColor">@color/subs_text</item>
-		<item name="android:textAppearance">@style/TextAppearance.AppCompat.Small</item>
+<!--		<item name="android:textAppearance">@style/TextAppearance.AppCompat.Small</item>-->
 	</style>
 
 	<style name="SubscribeButton" parent="AppTheme">
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:textColor">@color/subs_text</item>
-		<item name="android:textAppearance">@style/TextAppearance.AppCompat.Small</item>
+<!--		<item name="android:textAppearance">@style/TextAppearance.AppCompat.Small</item>-->
 		<item name="android:minHeight">0dp</item>
 		<item name="android:minWidth">0dp</item>
 		<item name="android:padding">3dp</item>
