--- a/app/src/main/res/menu/channel_options_menu.xml
+++ b/app/src/main/res/menu/channel_options_menu.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/share"
+        android:id="@+id/share_channel"
         android:title="@string/share_via"/>
     <item
-        android:id="@+id/copyurl"
+        android:id="@+id/channel_copyurl"
         android:title="@string/copy_url"/>
     <item
         android:id="@+id/open_channel" android:visible="false"
