Update channel status, when YT reports as "terminated"/"deleted"
Display the status in the subs drawer, and do not fetch videos for
channels with not-ok state

--- a/app/src/main/res/values/strings_subs.xml
+++ b/app/src/main/res/values/strings_subs.xml
@@ -30,4 +30,7 @@
 	<string name="failed_to_import_subscriptions">Could not import your YouTube subscriptions.</string>
 
 	<string name="about">About</string>
+    <string name="status_not_exists">[Deleted] </string>
+    <string name="status_account_terminated">[Terminated] </string>
+
 </resources>
