Fix the video search menu item in the Extra flavor

--- a/app/src/extra/res/menu/main_activity_menu.xml
+++ b/app/src/extra/res/menu/main_activity_menu.xml
@@ -5,7 +5,7 @@
 	<item android:id="@+id/menu_search"
 		  android:title="@string/search_videos"
 		  android:icon="@drawable/ic_search"
-		  app:showAsAction="always"
+		  app:showAsAction="collapseActionView|ifRoom"
 		  app:actionViewClass="androidx.appcompat.widget.SearchView"/>
 
 	<item
