Fix background of the video-description drawer

--- a/app/src/main/res/layout/video_description.xml
+++ b/app/src/main/res/layout/video_description.xml
@@ -2,14 +2,13 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:background="@color/video_player_drawer_background">
+			android:layout_height="match_parent">
 
 	<LinearLayout
 		android:id="@+id/video_desc_linearlayout"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:background="@color/colorPrimary"
+        android:background="@color/video_player_drawer_background"
 		android:orientation="vertical"
 		android:padding="16dp">
 
