--- a/app/src/main/res/values/strings_preferences.xml
+++ b/app/src/main/res/values/strings_preferences.xml
@@ -749,7 +749,7 @@
 
     <string name="pref_key_app_language" translatable="false">pref_key_app_language</string>
     <string name="pref_title_app_language">Application Language</string>
-    <string name="pref_summary_app_language">The language used for all the labels in the application</string>
+    <string name="pref_summary_app_language">The language used for all the labels in the application: %s</string>
 
     <!--
         SPONSORBLOCK
