--- a/app/src/main/res/layout/fragment_youtube_player_tutorial.xml
+++ b/app/src/main/res/layout/fragment_youtube_player_tutorial.xml
@@ -50,6 +50,7 @@
 
 		<TextView
 			android:id="@+id/pageCounterTextView"
+			android:textColor="#26ab9e"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginBottom="8dp"
