--- a/app/src/main/res/values/strings_preferences.xml
+++ b/app/src/main/res/values/strings_preferences.xml
@@ -789,4 +789,14 @@
         <item>interaction</item>
         <item>music_offtopic</item>
     </string-array>
+
+    <!--
+        SECURITY
+    -->
+    <string name="pref_security_category">Security</string>
+    <string name="pref_key_security_pin" translatable="false">security_pin</string>
+    <string name="pref_title_set_security_pin">Set Security PIN</string>
+    <string name="pref_summary_set_security_pin">Set a PIN to protect access to preferences and sensitive actions.</string>
+    <string name="pref_title_enter_security_pin">Enter Security PIN</string>
+    <string name="pref_summary_enter_security_pin">Enter your PIN to access preferences and sensitive actions.</string>
 </resources>
