--- a/app/src/main/res/xml/preference_security.xml
+++ b/app/src/main/res/xml/preference_security.xml
@@ -7,6 +7,13 @@
         app:title="@string/pref_security_category"
         app:iconSpaceReserved="false">
 
+        <CheckBoxPreference
+            app:defaultValue="false"
+            app:key="@string/pref_key_require_pin_code"
+            app:title="@string/pref_title_require_pin_code"
+            app:summary="@string/pref_summary_require_pin_code"
+            app:iconSpaceReserved="false" />
+
         <EditTextPreference
             app:key="@string/pref_key_security_pin"
             app:title="@string/pref_title_set_security_pin"
