--- a/app/src/main/res/xml/preference_backup.xml
+++ b/app/src/main/res/xml/preference_backup.xml
@@ -42,4 +42,10 @@
 		app:summary="@string/pref_summary_export_subs_opml"
 		app:iconSpaceReserved="false" />
 
+	<Preference
+		app:key="@string/pref_key_import_subs_opml"
+		app:title="@string/pref_title_import_subs_opml"
+		app:summary="@string/pref_summary_import_subs_opml"
+		app:iconSpaceReserved="false" />
+
 </PreferenceScreen>
